# neolvox

./: .clang-format  .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  README.org  dummy.cpp  flake.nix  proto-woo.py  vcpkg.json
core/: CMakeLists.txt
core/src/: algorithms.cpp  compute_pad.cpp
core/tests/: CMakeLists.txt
ctlibs/: CMakeLists.txt  dependencies.pptx  documentinterface.h  graphicsviewinterface.h  library.pro  library_test.pro  loginterface.h  painterinterface.h  treeviewinterface.h
ctlibs/ctlibaction/: CMakeLists.txt  ctlibaction.pro  ctlibaction_global.h
ctlibs/ctlibactionaddon/: CMakeLists.txt  ctlibactionaddon.pro  ctlibactionaddon_global.h  libdependencies.pri
ctlibs/ctlibclouds/: CMakeLists.txt  ct_color.h  ct_normal.h  ct_point.cpp  ct_point.h  ctlibclouds.pro  ctlibclouds_global.h
ctlibs/ctlibcommon/: CMakeLists.txt
ctlibs/ctlibcore/: CMakeLists.txt  cdm_actionsmanager.cpp  cdm_actionsmanager.h  cdm_configfile.cpp  cdm_hrscriptmanagerxml.cpp  cdm_hrscriptmanagerxml.h  cdm_hrscriptxmlreader.cpp  cdm_hrscriptxmlreader.h  cdm_hrscriptxmlwriter.cpp  cdm_hrscriptxmlwriter.h  cdm_internationalization.cpp  cdm_log.cpp  cdm_log.h  cdm_pluginmanager.cpp  cdm_pluginmanager.h  cdm_scriptmanagerabstract.cpp  cdm_scriptmanagerabstract.h  cdm_scriptmanagerxmlallversions.cpp  cdm_scriptmanagerxmlallversions.h  cdm_scriptproblem.cpp  cdm_scriptproblem.h  cdm_stdiolistener.cpp  cdm_stdioparser.cpp  cdm_stdioparser.h  cdm_steplistdocexporter.cpp  cdm_steplistdocexporter.h  cdm_steplistinfomanager.cpp  cdm_steplistinfomanager.h  cdm_stepmanager.cpp  cdm_stepmanager.h  cdm_stepmanageroptions.cpp  cdm_stepmanageroptions.h  cdm_stepsmenumanager.cpp  cdm_stepsmenumanager.h  cdm_tools.cpp  cdm_tools.h  cdm_xmltools.cpp  cdm_xmltools.h  ctlibcore.pro  libdependencies.pri
ctlibs/ctlibexporter/: CMakeLists.txt  ctlibexporter.pro  ctlibexporter_global.h  libdependencies.pri
ctlibs/ctlibfilters/: CMakeLists.txt  ctlibfilters.pro
ctlibs/ctlibgdal/: CMakeLists.txt  ctlibgdal.pro
ctlibs/ctlibio/: CMakeLists.txt  ctlibio.pro  libdependencies.pri
ctlibs/ctliblas/: CMakeLists.txt  ctliblas.pro  ctliblas_global.h  libdependencies.pri
ctlibs/ctliblaz/: CMakeLists.txt  ctliblaz.pro  ctliblaz_global.h  libdependencies.pri
ctlibs/ctliblog/: CMakeLists.txt  ctliblog.pro  ctliblog_global.h
ctlibs/ctlibmath/: CMakeLists.txt  ctlibmath.pro  ctlibmath_global.h
ctlibs/ctlibmetrics/: CMakeLists.txt  ctlibmetrics.pro  libdependencies.pri
ctlibs/ctlibmodels/: CMakeLists.txt  ctlibmodels.pro  ctlibmodels_global.h  icons.qrc
ctlibs/ctlibmodelsextraviews/: CMakeLists.txt  ctg_modelslinkconfigurationflowview.cpp  ctg_modelslinkconfigurationflowview.h  ctg_modelslinkconfigurationflowview.ui  ctlibmodelsextraviews.pro  ctlibmodelsextraviews_global.h
ctlibs/ctlibopencv/: CMakeLists.txt  ctlibopencv.pro
ctlibs/ctlibpcl/: CMakeLists.txt  ct_pcldefines.h  ctlibpcl.pro  libdependencies.pri
ctlibs/ctlibplugin/: CMakeLists.txt  ct_abstractstepplugin.cpp  ct_abstractstepplugin.h  ctlibplugin.pro  ctlibplugin_global.h  interfacesforplugin.h  libdependencies.pri  pluginentryinterface.h
ctlibs/ctlibreader/: CMakeLists.txt  ctlibreader.pro  ctlibreader_global.h  libdependencies.pri
ctlibs/ctlibstdactions/: CMakeLists.txt  ctlibstdactions.pro  ctlibstdactions_global.h  icons.qrc  libdependencies.pri
ctlibs/ctlibstep/: CMakeLists.txt  ctlibstep.pro  ctlibstep_global.h  libdependencies.pri
ctlibs/ctlibstepaddon/: CMakeLists.txt  ctlibstepaddon.pro  ctlibstepaddon_global.h  libdependencies.pri
ctlibs/ctlibstructure/: CMakeLists.txt  ctlibstructure.pro  ctlibstructure_global.h  libdependencies.pri
ctlibs/ctlibstructureaddon/: CMakeLists.txt  ctlibstructureaddon.pro  ctlibstructureaddon_global.h  libdependencies.pri
ctlibs/ctlibstructurewidget/: CMakeLists.txt  ctlibstructurewidget.pro  ctlibstructurewidget_global.h  libdependencies.pri
ctlibs/ctlibwidget/: CMakeLists.txt  ctlibwidget.pro  ctlibwidget_global.h
lvox/: CMakeLists.txt  lvox_pluginentry.cpp  lvox_pluginentry.h  lvox_sharedfortest.h  lvox_steppluginmanager.cpp  pluginlvox.pro
lvox/languages/: pluginlvoxv2_en.ts  pluginlvoxv2_fr.ts
lvox/qtwidgets/: multiselectcombobox.h
lvox/step/: lvox3_stepcomputelvoxgrids.cpp  lvox3_stepcomputelvoxgrids.h  lvox3_stepcomputenormalizedprofiles.cpp  lvox3_stepcomputenormalizedprofiles.h  lvox3_stepcomputepad.cpp  lvox3_stepcomputepad.h  lvox3_stepcomputeprofiles.cpp  lvox3_stepcomputeprofiles.h  lvox3_stepconfigurescanner.cpp  lvox3_stepconfigurescanner.h  lvox3_stepextractcirculargrid.cpp  lvox3_stepextractcirculargrid.h  lvox3_stepgridnormalisation.cpp  lvox3_stepgridnormalisation.h  lvox3_stepgridnormalisationraster.cpp  lvox3_stepgridnormalisationraster.h  lvox3_stepinterpolatedistance.h  lvox3_steploadfiles.cpp  lvox3_stepmakeshootingpatternformls.cpp  lvox3_stepmergegrids.cpp  lvox3_stepmergegrids.h
lvox/tools/: lvox3_computelvoxgridspreparator.cpp  lvox3_computelvoxgridspreparator.h  lvox3_factory.hpp  lvox3_genericconfiguration.h  lvox3_gridmode.h  lvox3_gridtools.h  lvox3_gridtype.h  lvox3_mergegrids.h  lvox3_thetaphishootingpattern.cpp  lvox3_thetaphishootingpattern.h  lvox3_utils.h  lvox_computebeforethread.cpp  lvox_computebeforethread.h  lvox_computebeforewithlengththresholdthread.cpp  lvox_computebeforewithlengththresholdthread.h  lvox_computedensitythread.cpp  lvox_computedensitythread.h  lvox_computehitsthread.cpp  lvox_computehitsthread.h  lvox_computetheoriticalsthread.cpp  lvox_computetheoriticalsthread.h  lvox_countvisitor.cpp  lvox_countvisitor.h  lvox_countwithlengththresholdvisitor.cpp  lvox_countwithlengththresholdvisitor.h  lvox_distancevisitor.cpp  lvox_distancevisitor.h
lvox/view/: computegridsconfiguration.cpp  computegridsconfiguration.h  computepadconfiguration.ui  computeprofilesconfiguration.h  genericcomputegridsconfiguration.cpp  genericcomputegridsconfiguration.h  genericcomputegridsconfiguration.ui  loadfileconfiguration.cpp  loadfileconfigutil.cpp  loadfileconfigutil.h  (+3 more)
standalone/: CMakeLists.txt  main.cpp
(+1526 files in other folders)
