# WARNING: The order here is important

add_subdirectory(ctlibcommon)
add_subdirectory(ctlibmodels)
add_subdirectory(ctlibmodelsextraviews)
add_subdirectory(ctliblog)
add_subdirectory(ctlibmath)
add_subdirectory(ctlibwidget)
add_subdirectory(ctlibaction)
add_subdirectory(ctlibclouds)
add_subdirectory(ctlibstructure)

add_subdirectory(ctlibstep)
add_subdirectory(ctlibstructureaddon)
add_subdirectory(ctlibstepaddon)
add_subdirectory(ctlibfilters)
add_subdirectory(ctlibmetrics)
add_subdirectory(ctlibstructurewidget)
add_subdirectory(ctlibexporter)
add_subdirectory(ctlibreader)
