# WARNING: The order here is important

add_subdirectory(ctlibcommon)
add_subdirectory(ctlibmodels)
add_subdirectory(ctlibmodelsextraviews)
add_subdirectory(ctliblog)
add_subdirectory(ctlibmath)
add_subdirectory(ctlibwidget)
add_subdirectory(ctlibaction)
add_subdirectory(ctlibclouds)
add_subdirectory(ctlibstructure)

add_subdirectory(ctlibstep)
add_subdirectory(ctlibstructureaddon)
add_subdirectory(ctlibactionaddon)
add_subdirectory(ctlibstepaddon)
add_subdirectory(ctlibfilters)
add_subdirectory(ctlibmetrics)
add_subdirectory(ctlibstructurewidget)
add_subdirectory(ctlibexporter)
add_subdirectory(ctlibreader)
add_subdirectory(ctlibstdactions)
add_subdirectory(ctlibplugin)
add_subdirectory(ctliblas)
add_subdirectory(ctliblaz)
add_subdirectory(ctlibio)
add_subdirectory(ctlibcore)
ADD_SUBDIRECTORY(ctlibopencv)
ADD_SUBDIRECTORY(ctlibgdal)
add_subdirectory(ctlibpcl)
